--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+<br>
 <form class="ui container" #ngForm="ngForm" [formGroup]="form" (submit)="handleSubmit($event)">
     <div class="ui grid">
 
