--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-1/int06-11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-1/int06-11-1.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+<br>
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
     <span>รายละเอียดแบบขอเบิกเงินค่าเช่าบ้าน (แบบ 6006)</span>
 </div>
