--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3-01/int06-11-3-01.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3-01/int06-11-3-01.component.html
@@ -258,9 +258,9 @@
         <br>
         <br>
         <div class="ui stackable center aligned page grid">
-          <button class="ui mini primary button" type="submit"> ถัดไป</button>
+          <button class="ui mini primary button" type="submit" [disabled]="nextButton"> ถัดไป</button>
           <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i> ล้างข้อมูล</button>
-          <button class="ui mini gray button" routerLink="/int06/11" type="button"><i class="share icon"></i>กลับ</button>
+          <button class="ui mini gray button" routerLink="/int06/11" type="button"><i class="reply icon"></i>กลับ</button>
         </div><br>
       </form>
     </div>
