--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3.component.html
@@ -187,7 +187,7 @@
           <div class="inline fields ">
             <div class="two wide field"></div>
             <div class="two wide field required">
-              <label >{{i+1}}) บุตรชื่อ </label>
+              <label>{{i+1}}) บุตรชื่อ </label>
             </div>
             <div class="three wide field" [ngClass]="{ 'error': submitted && formArrayValid(i, 'name')}">
               <input type="text" formControlName="name" name="name{{i}}" id="name{{i}}">
@@ -195,12 +195,12 @@
             <div class="two wide field">
               <label> เกิดเมื่อ </label>
             </div>
-            <div class="three wide field" >
+            <div class="three wide field">
               <div class="ui calendar full-width birth" id="birth{{i+1}}">
                 <div class="ui input left icon">
                   <i class="calendar alter nate outline icon"></i>
-                  <input type="text" formControlName="birth" name="birth{{i}}" id="birth{{i}}" autocomplete="off" [attr.readonly]="null"
-                    placeholder="วว/ดด/ปปปป" [attr.required]="true" >
+                  <input type="text" formControlName="birth" name="birth{{i}}" id="birth{{i}}" autocomplete="off"
+                    [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
                 </div>
               </div>
               <!-- <input type="text" formControlName="birth" name="birth" id="birth"> -->
@@ -225,7 +225,8 @@
             <div class="two wide field"></div>
             <div class="two wide field"></div>
             <div class="five wide field">
-              <label class="text-right full-width">(กรณีเป็นบุตรแทนที่บุตรซึ่งถึงแก่กรรมแล้ว) &nbsp; &nbsp; แทนที่บุตรลำดับที่ </label>
+              <label class="text-right full-width">(กรณีเป็นบุตรแทนที่บุตรซึ่งถึงแก่กรรมแล้ว) &nbsp; &nbsp;
+                แทนที่บุตรลำดับที่ </label>
             </div>
             <div class="three wide field">
               <input type="number" formControlName="orderReplace" name="orderReplace{{i}}" id="orderReplace{{i}}">
@@ -246,8 +247,8 @@
               <div class="ui calendar full-width birthReplace" id="birthReplace{{i+1}}">
                 <div class="ui input left icon">
                   <i class="calendar alter nate outline icon"></i>
-                  <input type="text" formControlName="birthReplace" name="birthReplace{{i}}" id="birthReplace{{i}}" autocomplete="off"
-                    [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true" >
+                  <input type="text" formControlName="birthReplace" name="birthReplace{{i}}" id="birthReplace{{i}}"
+                    autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
                 </div>
               </div>
             </div>
@@ -262,7 +263,7 @@
                 <div class="ui input left icon">
                   <i class="calendar alter nate outline icon"></i>
                   <input type="text" formControlName="dateDeadReplace" name="dateDeadReplace{{i}}" id="dateDeadReplace{{i}}"
-                    autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true" >
+                    autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
                 </div>
               </div>
             </div>
@@ -428,10 +429,68 @@
       </div>
     </div>
     <br>
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
+      <span>เอกสารหลักฐานประกอบคำเบิก</span>
+    </div>
+    <div class="ui form">
+      <div class="ui attached segment" [ngClass]="{ 'loading': loadingUL }">
+        <div class="inline fields ">
+          <div class="two wide field">
+
+          </div>
+          <div class="ten wide field">
+            <label style="color:red">*รับรองไฟล์นามสกุล &nbsp;&nbsp;เอกสาร xls, xlsx, doc, docx, ppt, pptx
+              &nbsp;&nbsp;รูป gif, jpeg, jpg, png, bmp &nbsp;&nbsp;ขนาดไม่เกิน 25 MB</label>
+          </div>
+        </div>
+        <div class="inline fields ">
+          <div class="two wide field">
+
+          </div>
+          <div class="three wide field">
+            <label>หลักฐานประกอบคำเบิก</label>
+          </div>
+          <div class="six wide field upload-panel">
+            <input type="file" name="files" id="files" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,
+                    application/vnd.ms-excel,.doc,.docx"
+              (change)="onChangeFile()">
+          </div>
+          <div class="three wide field">
+            <button class="ui mini yellow button" type="button" (click)="onUpload($event)" [ngClass]="{ 'disabled': flgOnLoad }"><i
+                class="upload icon"></i>อัพโหลด</button>
+          </div>
+        </div>
+
+        <table id="dataTable" class="ui small celled table striped selectable" style="width: 100%;">
+          <thead>
+            <tr style="text-align: center">
+              <th>ลำดับที่</th>
+              <th>วันที่</th>
+              <th>ชื่อเอกสาร</th>
+              <!-- <th>ขนาด (MB)</th> -->
+              <th>จัดการ</th>
+            </tr>
+            <tr *ngIf="tableUpload.length < 1">
+              <td colspan="5" class="text-center">ไม่มีข้อมูล</td>
+            </tr>
+            <tr *ngFor="let ul of tableUpload; let i = index">
+              <td class="text-center">{{i+1}}</td>
+              <td class="text-center">{{ul.date}}</td>
+              <td class="text-center">{{ul.name}}</td>
+              <!-- <td class="text-right">{{ul.size}}</td> -->
+              <td class="text-center">
+                <button class="ui mini red button" type="button" (click)="onDel(i)"><i class="trash icon"></i>ลบ</button>
+              </td>
+            </tr>
+          </thead>
+        </table>
+      </div>
+    </div>
+    <br>
 
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui  primary button" type="submit">
+        <button class="ui  primary button" type="submit"  [ngClass]="{ 'disabled': tableUpload.length < 1 }">
           <i class="save icon"></i>บันทึก</button>
         <button class="ui yellow button" type="button">
           <i class="print icon"></i>ส่งออก</button>
